src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  font-family: bahnschrift;
  --ifm-font-family-base: bahnschrift, bold;
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

/* Components */

.alert {
  --ifm-link-color: inherit;
  --ifm-link-decoration: inherit;
}

.boundary {
  border: 1px solid var(--ifm-alert-border-color);
}

.navbar {
  box-shadow: 0 0.4rem 1rem 0 rgba(0, 0, 0, 0.4);
}

.badge--primary {
  background-color: var(--ifm-color-primary-contrast-background);
}

.badge--warning {
  background-color: var(--ifm-color-warning-contrast-background);
}

.badge--info {
  background-color: var(--ifm-color-info-contrast-background);
}

.badge--secondary {
  background-color: var(--ifm-color-secondary-contrast-background);
  color: white;
}

.tag_badge {
  color: var(--ifm-color-primary);
  background-color: transparent;
}

/* Home page modification */
.banner_title {
  font-size: 3rem;
  color: var(--ifm-color-primary);
  /* background: var(--ifm-color-primary); */
  /* background-clip: text;
  -webkit-text-fill-color: transparent; */
}

.home_slap {
  margin: 0% 1% 0% 1%;
  border: 0.15rem solid var(--ifm-button-border-color);
  transition: all 0.2s ease;
  padding: calc(var(--ifm-button-padding-vertical) * 0.8)
    calc(var(--ifm-button-padding-horizontal) * 0.8);
}

@media (orientation: landscape) {
  .home_slap:hover {
    transform: scale(1.2);
    margin: 0% 4% 0% 4%;
    transition: all 0.2s ease;
  }
}

.hero__subtitle {
  text-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.4);
  font-weight: 450;
}

@media (orientation: portrait) {
  .hero__subtitle {
    font-size: 125%;
  }
  .home_slap {
    margin-bottom: 5%;
  }
}

@media (min-width: 550px) {
  .button {
    font-size: calc(1.025rem * var(--ifm-button-size-multiplier));
  }
}

